--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Painting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="Move",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseScrollUp)
++AxisMappings=(AxisName="Zoom",Scale=-1.000000,Key=MouseScrollDown)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
