--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,6 +85,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseScrollUp)
 +AxisMappings=(AxisName="Zoom",Scale=-1.000000,Key=MouseScrollDown)
++AxisMappings=(AxisName="Fly",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Fly",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
