--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/L_TempMap.L_TempMap
-EditorStartupMap=/Game/Map/L_TempMap.L_TempMap
+GameDefaultMap=/Game/_Game_/Maps/L_Menu.L_Menu
+EditorStartupMap=/Game/_Game_/Maps/L_Menu.L_Menu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
