--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Game_/Maps/L_Menu.L_Menu
 EditorStartupMap=/Game/_Game_/Maps/L_Menu.L_Menu
+GameInstanceClass=/Game/_Game_/GamePaly/BP_MyGameInstance.BP_MyGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
