--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -90,6 +90,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="key6",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +ActionMappings=(ActionName="key7",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="temp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
++ActionMappings=(ActionName="Pause_Dream",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Move",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseScrollUp)
